# keycloak-management-server

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md
keycloak/: Cargo.toml
keycloak-domain/: Cargo.toml  TODO.md  justfile
keycloak-domain/examples/: event_system_example.rs
keycloak-domain/src/: lib.rs
keycloak-domain/src/application/ports/: auth.rs  config.rs  events.rs  mod.rs  repository.rs
keycloak-domain/src/application/services/: auth_macros.rs  authentication.rs  authorization_helper.rs  client_management.rs  group_management.rs  mod.rs  realm_management.rs  role_management.rs  user_management.rs
keycloak-domain/src/domain/: errors.rs
keycloak-domain/src/domain/entities/: client.rs  common.rs  group.rs  mod.rs  realm.rs  role.rs  user.rs
keycloak-domain/src/domain/services/: auth.rs  mod.rs  validation.rs
keycloak-domain/src/infrastructure/adapters/: composite_event_publisher.rs  env_config.rs  event_bus.rs  event_store.rs  keycloak_auth_provider.rs  keycloak_authorization_service.rs  keycloak_rest.rs  keycloak_token_manager.rs  memory_event_publisher.rs  mod.rs
keycloak-domain/src/infrastructure/config/: env_loader.rs  mod.rs
keycloak-domain/tests/: README.md  REAL_KEYCLOAK_TESTING.md  TODO_TESTS.md  client_service_tests.rs  comprehensive_service_tests.rs  comprehensive_user_service_tests.rs  domain_service_tests.rs  event_system_tests.rs  group_service_tests.rs  integration_test.rs  integration_tests_with_keycloak.rs  property_tests.proptest-regressions  property_tests.rs  realm_service_comprehensive_tests.rs  realm_service_tests.rs  role_service_tests.rs  testcontainers_keycloak.rs  user_entity_tests.rs
keycloak-domain/tests/mocks/: mod.rs
keycloak-management-api/: Cargo.toml  README.md  README_MCP.md  TODO.md  docker-compose.yml
keycloak-management-api/examples/: mcp_client.rs  usage.rs
keycloak-management-api/src/: config.rs  dto.rs  error.rs  lib.rs  main.rs  mcp_server.rs  state.rs
keycloak-management-api/src/handlers/: auth.rs  client_advanced.rs  client_roles.rs  client_scopes.rs  clients.rs  credentials.rs  events.rs  groups.rs  health.rs  identity_providers.rs  mod.rs  realms.rs  role_mappings.rs  roles.rs  sessions.rs  user_attributes.rs  user_federation.rs  users.rs
keycloak-management-api/src/mcp/: mod.rs
