[package]
name = "keycloak"
version = "26.3.100"
authors = ["Alexander Korolev <alexander.korolev.germany@gmail.com>"]
edition = { workspace = true }
categories = ["api-bindings", "asynchronous"]
description = """
Keycloak Admin REST API.
"""
homepage = "https://github.com/kilork/keycloak"
keywords = ["api", "async", "keycloak", "rest"]
license = "Unlicense OR MIT"
repository = "https://github.com/kilork/keycloak"
rust-version = { workspace = true }

[features]
default = ["tags-all"]
schemars = ["dep:schemars"]
multipart = ["reqwest/multipart"]
rc = ["rc-map", "rc-str", "rc-val", "rc-vec"]
rc-map = ["serde/rc"]
rc-str = ["serde/rc"]
rc-val = ["serde/rc"]
rc-vec = ["serde/rc"]
tags-all = ["tag-attack-detection", "tag-authentication-management", "tag-client-attribute-certificate", "tag-client-initial-access", "tag-client-registration-policy", "tag-client-role-mappings", "tag-client-scopes", "tag-clients", "tag-component", "tag-groups", "tag-identity-providers", "tag-key", "tag-organizations", "tag-protocol-mappers", "tag-realms-admin", "tag-role-mapper", "tag-roles", "tag-roles-by-id", "tag-scope-mappings", "tag-users"]
tag-attack-detection = []
tag-authentication-management = []
tag-client-attribute-certificate = []
tag-client-initial-access = []
tag-client-registration-policy = []
tag-client-role-mappings = []
tag-client-scopes = []
tag-clients = []
tag-component = []
tag-groups = []
tag-identity-providers = []
tag-key = []
tag-organizations = []
tag-protocol-mappers = []
tag-realms-admin = []
tag-role-mapper = []
tag-roles = []
tag-roles-by-id = []
tag-scope-mappings = []
tag-users = []

[dependencies]
reqwest = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
async-trait = { workspace = true }
schemars = { version = "0.8.11", default-features = false, features = [
    "derive",
], optional = true }
percent-encoding = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
heck = "0.5"
clap = { version = "4", features = ["derive", "std"], default-features = false }
toml = "0.8"
serde = { version = "1", features = ["derive", "rc"] }
indexmap = { version = "2", features = ["serde"] }
